# LocalRAG

./: .gitignore  .pre-commit-config.yaml  APP_README.md  Dockerfile  README.md  actions_log.txt  conf.py  cv.txt  env  image_gen_prompts.md  input.d2  jobs.csv  lancer_streamlit.bat  lancer_streamlit.vbs  launch_app.bat  launch_streamlit.ps1  launch_streamlit_movie.ps1  launch_streamlit_movie.vbs  output.md  package-lock.json  package.json  pipeline_diagram.md  post_linkedin.md  profile.html  profile.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run_app.py  run_app.spec  temp.txt  transcribed_log.txt  video_urls copy.csv
.devcontainer/: devcontainer.json
.github/workflows/: format.yml
.gitlab/merge_request_templates/: mytemplate.md
.streamlit/: config.toml
app/: streamlit_app.py
app/pages/: sources_page.py
backend/: main.py
config/: config.yaml  internet_config.yaml  movie_studio_config.yaml  omniparser_agent_config.yaml  optimiz_config.yaml  test_config.yaml
config/comparative_evaluation/: all_mini_lm_v6.yaml  all_mpnet_lm.yaml  bge_m3.yaml
config/llm_answer_comparison/: gemma2.2_config.yaml  llama3.1_70b_config.yaml  llama3.1_config copy.yaml
config/retrieval_comparison/: hybrid+rerank+no_routing.yaml  hybrid+rerank+routing.yaml  no_hybrid+rerank.yaml  no_hybrid_no_rerank.yaml
custom_css/: streamlit_app.css  stunning_button.css
frontend/: index.html  package-lock.json  package.json  postcss.config.js  styles.css  tailwind.config.js
frontend/scripts/: chat.js
frontend/src/: styles.css
google_json_key/: python-sheets-446015-aa8eef72c872.json
omniparser_v2/: README.md
omniparser_v2/icon_caption/: config.json  generation_config.json  model.safetensors
omniparser_v2/icon_detect/: model.pt  model.yaml  train_args.yaml
prompts/: CameraAngleExpert.md  FinalPromptRefiner.md  LightingExpert.md  PostProductionExpert.md  RefinementExpert.md  adapt_prompt_template.txt  base_rag_prompt_en.txt  base_rag_prompt_fr.txt  browser_action_planning.txt  camera_angle_expert.txt  cinematic_prompt.md  company_contact_prompt.txt  cot_prompt_en.txt  cot_prompt_fr.txt  description2intertitles.txt  final_prompt_refiner.txt  google_sheets_agent_prompt.txt  google_sheets_resource_prompt.txt  image2markdown.txt  image2real.txt  image2video.txt  image_prompt_engineering.txt  image_refinement_prompt.txt  job_offer_parser_prompt.txt  job_search_prompt.txt  lighting_expert.txt  linkedin_cleaning.txt  llm_text_classification.txt  meeting_summary_prompt.txt  memory_contextualizer.txt  midjourney_prompt_collection.md  post_production_expert.txt  previous_answer_correction.txt  project_description2cinematic_style.txt  prompt2sound.txt  prompt2video.txt  query2speaker_text.txt  query_breaker_en.txt  query_breaker_fr.txt  refinement_expert.txt  (+8 more)
scripts/: chainlit_app.py  clustering_by_topic.py  comparative_evaluation.py  create_charts.py  download_youtube.py  evaluate_pipeline_v2.py  fill_database.py  gitlab_scrapping.py  launch_rag.py  launch_streamlit.py  mattermost_scrapping.py  obtain_cookies.py  streamlit_app.py  streamlit_tind.py
scripts/deprecated_scripts/: auto_hybrid_search.py  chatbot_mattermost.py  clone_database.py  eval_dataset_curation_streamlit.py  evaluate_pipeline.py  evaluate_pipeline_parallel.py  fileteirng_kwargs_chroma.py  folder_cleaning.py  happeo_scrapping.py  hyperparameters_optimisation.py  main_scrapper.py  test.py  test7.py  test_florence_ocr.py  test_llm_lingua.py  test_ocr.py  test_structured_extraction.py  text-to-speach.py
src/: LLM.py  agentic_rag_utils.py  allowed_detailled_relations.json  allowed_entities.json  allowed_relations.json  auto_instagram_publi.py  auto_job.py  chainlit_app_utils.py  chunk_analysis.py  custom_langchain_componants.py  embedding_model.py  evaluation_utils.py  flux_realism_utils.py  flux_utils.py  generation_utils.py  generation_utils_v2.py  ghibsy_utils.py  github_model_utils.py  github_utils.py  image_analysis.py  instagram_api.py  instagram_downloader.py  internet_utils.py  job_scrapper.py  knowledge_graph.py  notion_utils.py  query_router_dataset_creator_streamlit.py  query_routing_utils.py  retrieval_utils.py  retrieval_utils_v2.py  streamlit_app_utils.py  streamlit_tind_utils.py  suno_utils.py  telegram_utils.py  text_classification_utils.py  transcription_utils.py  unstructured_utils.py  utils.py  vectorstore_utils_v2.py  video_creation_utils.py  (+3 more)
src/agentic_internet/: connect_to_page.py  execute_search.py
src/aux_utils/: auto_instagram_publi.py  auto_job.py  chainlit_app_utils.py  chunk_analysis.py  cinematic_agent_prompter.py  custom_github_models.py  email_utils.py  evaluation_utils.py  fine_tune_embed.py  flux_utils.py  github_llm.py  google_sheets_agent.py  graph_maker_utils.py  helium_utils.py  image_analysis.py  image_download_utils.py  instagram_api.py  internet_utils.py  job_agent_v1.py  job_agent_v2.py  job_scrapper.py  job_scrapper_v2.py  linkedin_scrapper.py  linkedin_utils.py  logging_utils.py  long_doc_editor.py  luma_ray2_agent.py  meeting_utils.py  notion_utils.py  object_detection_utils.py  query_router_dataset_creator_streamlit.py  (+21 more)
tests/: advanced_rag_answer_test.py  imagen3_api.py  linkedin_scrapper.py  test entity+relation extraction.py  test_LLM_answer.py  test_advanced_rag_answer.py  test_audio_cloning.py  test_browser_use.py  test_cuda.py  test_cuda_enabled.py  test_custom_css_button.py  test_deepseek_sambanova.py  test_disambiguation+node retrieval.ipynb  test_docling_pdf_loader.py  test_embedding_model.py  test_entity_description.py  test_entity_disambiguation.ipynb  test_entity_recal.py  test_fastembed.py  test_flux.py  test_fridge2receipe.py  test_gemini_api.py  test_generation_utils.py  test_github_models.py  test_google_search_api.py  test_google_sheets_api.py  test_greet_function.py  test_imagen_api.py  test_instabot.py  test_intent_classifier.py  test_internet_agent.py  test_knowledge_graph_builder.py  test_knowledge_graph_index.py  test_langgraph.py  test_language_detection.py  test_llm_keyword.py  test_markitdown.py  test_minicpm.py  test_nltk.py  test_ollama.py  (+26 more)
(+43 files in other folders)
