[project]
name = "nom_de_votre_projet"
version = "0.1.0"
description = "Une brève description de votre projet"
dependencies = [
    "accelerate>=0.26.0",
    "azure-ai-inference>=1.0.0b6",
    "chainlit>=0.1.0",
    "crawl4ai==0.3.746",
    "datasets>=3.1.0",
    "einops>=0.8.0",
    "fastembed-gpu>=0.4.2",
    "googlesearch-python>=1.2.5",
    "gradio-client>=1.4.3",
    "langchain-community>=0.3.8",
    "langchain-google-genai>=2.0.6",
    "langchain-groq>=0.2.1",
    "langchain-huggingface>=0.1.2",
    "langchain-qdrant>=0.2.0",
    "lingua-language-detector>=2.0.2",
    "linkedin-api>=2.3.1",
    "matplotlib>=3.9.3",
    "notion-client>=2.2.1",
    "pdoc3>=0.11.3",
    "python-jobspy>=1.1.75",
    "scalene>=1.5.48",
    "selenium>=4.27.1",
    "streamlit-extras>=0.5.0",
    "streamlit-image-comparison>=0.0.4",
    "transformers>=4.46.3",
    "yt-dlp>=2024.11.18",
]

[tool.kedro]
package_name = "llms-rag-enx"
project_name = "llms-rag-enx"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/dpt -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "llms-rag-enx"
version = "0.0.1"
description = "none"
readme = "README.md"

[tool.poetry.dependencies]
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.2.1%2Bcu121-cp311-cp311-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.17.1%2Bcu121-cp311-cp311-win_amd64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.2.1%2Bcu121-cp311-cp311-win_amd64.whl" }
python = "3.11.5"
groq = "^0.5.0"
langsmith = "^0.1.84"
matplotlib = "3.8.0"
python-dotenv = "1.0.1"
pyyaml = ">=3.0.0"
scikit-learn = "1.3.0"
selenium = "4.19.0"
st-annotated-text = "4.0.1"
streamlit = "^1.35.0"
tqdm = "^4.66.4"
umap-learn = "0.5.6"
fitz = "0.0.1.dev2"
docx2txt = "0.8"
openpyxl = "3.1.2"
notebook = "7.1.3"
ruff = "0.4.1"
loguru = "^0.7.2"
cryptography = "^42.0.7"
ollama = "0.3.3"
thefuzz = "^0.22.1"
pydub = "^0.25.1"
moviepy = "^1.0.3"
accelerate = "^0.30.1"
soundfile = "^0.12.1"
wordfreq = "^3.1.1"
markdown = "^3.6"
rank-bm25 = "^0.2.2"
setfit = "^1.0.3"
insanely-fast-whisper = "^0.0.15"
packaging = "<24.0"
wheel = "^0.43.0"
fpdf = "^1.7.2"
translate = "^3.6.1"
deep-translator = "^1.11.4"
gliner = "^0.2.2"
text-generation = "^0.7.0"
google-search-results = "^2.4.2"
numexpr = "2.8.4"
sentencepiece = "^0.2.0"
jinja2 = "^3.1.4"
vocos = "^0.1.0"
einops = "^0.8.0"
streamlit-pills = "^0.3.0"
pdfplumber = "^0.11.1"
pymupdf = "^1.24.7"
pdf2image = "^1.17.0"
timm = "^1.0.7"
python-doctr = "^0.8.1"
jq = "^1.7.0"
cupy-cuda12x = "^13.2.0"
flagembedding = "^1.2.10"
imageio = "2.34.1"
python-igraph = "^0.11.6"
leidenalg = "^0.10.2"
pipdeptree = "^2.23.1"
pytorch-metric-learning = "2.6.0"
peft = "^0.12.0"
mlflow = "^2.15.1"
pytube = "^15.0.0"
youtube-dl = "^2021.12.17"
pytubefix = "^6.9.2"
spicy = "^0.16.0"
notion-client = "^2.2.1"
notion = "^0.0.28"
spacy = "^3.7.5"
pyinstaller = "^6.10.0"
texify = "^0.1.10"
lingua-language-detector = "^2.0.2"
python-pptx = "^1.0.1"
pypdf = "^5.0.1"
sseclient-py = "^1.8.0"
st-copy-to-clipboard = "^0.1.6"
scrapetube = "^2.5.1"
yt-dlp = "^2024.9.27"
webdriver-manager = "^4.0.2"
pyautogui = "^0.9.54"
sentence-transformers = "^3.1.1"
transformers = "^4.45.2"
unstructured = "^0.15.13"
linkedin-scraper = "^2.11.4"
python-jobspy="^1.1.68"
srt = "^3.5.3"
pygithub = "^2.4.0"
pytelegrambotapi = "^4.23.0"
verovio = "^4.3.1"
easyocr = "^1.7.2"
opencv-python = "^4.10.0.84"
python-bidi = "^0.6.0"
openai = "^1.51.2"
browser-cookie3 = "^0.19.1"
rookiepy = "^0.5.2"
aikitchen-api = "^0.2.0"
sunoai = "^1.0.7"
simple-image-download = "^0.5"
python-magic-bin = "0.4.14"
google-images-download = "^2.8.0"
bing-image-downloader = "^1.1.2"
kling-creator = "^0.3.3"
chainlit = "^1.2.0"
crawl4ai = ">=0.1.0"
googlesearch-python = "^1.2.5"
fastembed-gpu = "^0.3.6"
streamlit-image-comparison = "^0.0.4"
instaloader = "^4.13.2"
google-generativeai = {git = "https://github.com/google-gemini/generative-ai-python", rev = "imagen"}
youtube-transcript-api = "^0.6.2"
langchain = "^0.3.7"
langchain-huggingface = "^0.1.2"
langchain-core = "^0.3.15"
langchain-groq = "^0.2.1"
langchain-experimental = "^0.3.3"
langchain-community = "^0.3.5"
langchain-qdrant = "^0.1.4"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    ".cache",
    ".local",
    "__pypackages__",
    "*.pyi",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
# Same as Black.
line-length = 80
indent-width = 4
