[project]
name = "LocalRAG"
version = "0.1.0"
description = "Une brève description de votre projet"
dependencies = [
    "accelerate>=0.26.0",
    "azure-ai-inference>=1.0.0b6",
    "chainlit>=0.1.0",
    "crawl4ai==0.3.746",
    "cython>=3.0.11",
    "datasets>=3.1.0",
    "docling>=2.12.0",
    "einops>=0.8.0",
    "fastembed-gpu>=0.4.2",
    "googlesearch-python>=1.2.5",
    "gradio-client>=1.4.3",
    "helium>=5.1.0",
    "langchain-community>=0.3.8",
    "langchain-experimental>=0.3.3",
    "langchain-google-genai>=2.0.6",
    "langchain-groq>=0.2.1",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.2.10",
    "langchain-qdrant>=0.2.0",
    "lingua-language-detector>=2.0.2",
    "linkedin-api>=2.3.1",
    "matplotlib>=3.9.3",
    "notion-client>=2.2.1",
    "pdoc3>=0.11.3",
    "pydub>=0.25.1",
    "pygithub>=2.5.0",
    "pytelegrambotapi>=4.25.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "python-jobspy>=1.1.75",
    "qrcode>=8.0",
    "ruff>=0.8.2",
    "scalene>=1.5.48",
    "selenium>=4.27.1",
    "streamlit-extras>=0.5.0",
    "streamlit-image-comparison>=0.0.4",
    "streamlit-js-eval>=0.1.7",
    "transformers>=4.46.3",
    "unstructured>=0.16.8",
    "yt-dlp>=2024.11.18",
]

[tool.kedro]
package_name = "llms-rag-enx"
project_name = "llms-rag-enx"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/dpt -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    ".cache",
    ".local",
    "__pypackages__",
    "*.pyi",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]


