[project]
name = "LocalRAG"
version = "0.1.0"
description = "Une brève description de votre projet"


dependencies = [
    "accelerate>=0.26.0",
    "azure-ai-inference>=1.0.0b6",
    "bs4>=0.0.2",
    "chainlit>=0.1.0",
    "chardet>=5.2.0",
    "cloudscraper>=1.2.71",
    "crawl4ai==0.4.243",
    "cython>=3.0.11",
    "datasets>=3.1.0",
    "easyocr>=1.7.2",
    "einops>=0.8.0",
    "fake-useragent>=2.0.3",
    "fastapi>=0.115.9",
    "fastembed-gpu>=0.4.2",
    "google-genai==1.1.0",
    "google-generativeai>=0.8.3",
    "googlesearch-python>=1.2.5",
    "gradio-client>=1.4.3",
    "grpcio>=1.70.0",
    "gspread>=6.1.4",
    "helium>=5.1.0",
    "imageio>=2.36.1",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.8",
    "langchain-experimental>=0.3.3",
    "langchain-google-genai>=2.0.6",
    "langchain-groq>=0.2.1",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.2.10",
    "langchain-qdrant>=0.2.0",
    "langgraph-cli[inmem]>=0.1.71",
    "langgraph-sdk>=0.1.51",
    "lingua-language-detector>=2.0.2",
    "linkedin-api>=2.3.1",
    "lumaai>=1.3.0",
    "m3u8>=6.0.0",
    "markitdown>=0.0.1a3",
    "matplotlib>=3.9.3",
    "moviepy>=2.1.2",
    "mss>=10.0.0",
    "nest-asyncio>=1.6.0",
    "notion-client>=2.2.1",
    "numpy>=1.26.3",
    "oauth2client>=4.1.3",
    "opencv-contrib-python>=4.11.0.86",
    "pdoc3>=0.11.3",
    "pillow>=10.4.0",
    "playwright>=1.49.0",
    "pyannote-audio>=3.3.2",
    "pydantic==2.10.0",
    "pydub>=0.25.1",
    "pygithub>=2.5.0",
    "pytelegrambotapi>=4.25.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "python-jobspy>=1.1.75",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.12.1",
    "qrcode>=8.0",
    "requests>=2.32.3",
    "ruff>=0.8.2",
    "scalene>=1.5.48",
    "selenium>=4.27.1",
    "st-annotated-text>=4.0.2",
    "st-tailwind>=1.3.0",
    "stqdm>=0.0.5",
    "streamlink>=7.1.3",
    "streamlit-elements>=0.1.0",
    "streamlit-extras>=0.5.0",
    "streamlit-image-comparison>=0.0.4",
    "streamlit-js-eval>=0.1.7",
    "streamlit-modal>=0.1.2",
    "streamlit==1.42.0",
    "supervision>=0.24.0",
    "thefuzz>=0.22.1",
    "timm>=1.0.14",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.46.3",
    "ultralytics>=8.3.76",
    "unstructured>=0.16.8",
    "uvicorn>=0.34.0",
    "webdriver-manager>=4.0.2",
    "yt-dlp>=2024.11.18",
    "zyphra>=0.1.2",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.kedro]
package_name = "llms-rag-enx"
project_name = "llms-rag-enx"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/dpt -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    ".cache",
    ".local",
    "__pypackages__",
    "*.pyi",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]


